<resources>
    <string name="app_name">Alarm</string>


    <string name="appbar_title">My Alarms</string>
    <string name="timer">Timer</string>
    <string name="setting">Setting</string>
    <string name="quick_alarm">Quick Alarm</string>
    <string name="add">Add</string>
    <string name="description_btn_add">Tap here to create an alarm</string>
    <string name="new_alarm">New Alarm</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="schedule_alarm">Schedule Alarm </string>
    <string name="message_placeholder">Enter an alarm message</string>
    <string name="default_text">Default</string>
    <string name="save">Save</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="schedule_for">Schedule for %1$s</string>
    <string name="stop">Stop</string>
    <string name="this_string">This</string>
    <string name="alarm">Alarm</string>


    <string name="noDescription">No description</string>
    <string name="title_select_date">Select a future date for this alarm</string>

    <string name="timer_stopwatch"><![CDATA[Timer & Stopwatch]]></string>
    <string name="stopwatch">Stopwatch</string>
    <string name="start">START</string>
    <string name="lap">LAP</string>
    <string name="_5m">5m</string>
    <string name="_10m">10m</string>
    <string name="_15m">15m</string>
    <string name="_30m">30m</string>
    <string name="_45m">45m</string>
    <string name="reset">RESET</string>
    <string name="index">Index</string>
    <string name="time">Time</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>

    <string name="character">Character</string>

    <string name="change_language">Language changed</string>
    <string name="change_theme">Theme changed</string>

    <string name="pause">PAUSE</string>



    <string name="discard_change">Discard changes?</string>
    <string name="discard_change_message">You have unsaved changes. Are you sure you want to discard them?</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="delete_alarm_message">Are you sure to delete this alarm?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    
    <string name="select_tone">Choose Sound</string>
    <string name="default_tone">Default Tone</string>
    <string name="clock_tone">Clock Tone</string>
    <string name="ring_tone">Ring Tone</string>
    <string name="school_tone">School Tone</string>
    <string name="trumpet_tone">Trumpet Tone</string>


</resources>