<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Timer display -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="center"
            android:hint="00"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="2"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:text=":"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/et_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="center"
            android:hint="00"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="2"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:text=":"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/et_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="center"
            android:hint="00"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="2"
            android:textSize="36sp" />

    </LinearLayout>

    <!-- Quick buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn5"
            style="@style/btnChooseDate"
            android:text="@string/_5m" />

        <Button
            android:id="@+id/btn10"
            style="@style/btnChooseDate"
            android:text="@string/_10m" />

        <Button
            android:id="@+id/btn15"
            style="@style/btnChooseDate"
            android:text="@string/_15m" />

        <Button
            android:id="@+id/btn30"
            style="@style/btnChooseDate"
            android:text="@string/_30m" />

        <Button
            android:id="@+id/btn45"
            style="@style/btnChooseDate"
            android:text="@string/_45m" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_reset_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_border"
            android:backgroundTint="@color/red"
            android:text="@string/reset"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/btn_start_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_border"
            android:text="@string/start"
            android:textColor="@color/white" />


    </LinearLayout>


</LinearLayout>
