<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:flow_horizontalAlign="center"
    tools:context=".presentation.fragment.NewAlarmFragment">

    <Toolbar
        android:id="@+id/tool_bar_new_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/ic_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/new_alarm"
                android:textColor="@color/text_color"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ic_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:padding="16dp"
                android:src="@drawable/ic_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_edit_time"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="@color/dark_blue"
            app:cardCornerRadius="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_edit_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="88dp"
                    android:text="00:00 AM"
                    android:textColor="@android:color/white"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAlignment="center"
                    app:layout_constraintVertical_bias="1.0" />

                <ImageButton
                    android:id="@+id/btn_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/btn_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_sun"
                style="@style/btnChooseDate"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="4dp"
                android:text="@string/sunday" />

            <Button
                android:id="@+id/btn_mon"
                style="@style/btnChooseDate"
                android:text="@string/monday" />

            <Button
                android:id="@+id/btn_tue"
                style="@style/btnChooseDate"
                android:text="@string/tuesday" />

            <Button
                android:id="@+id/btn_wed"
                style="@style/btnChooseDate"
                android:text="@string/wednesday" />

            <Button
                android:id="@+id/btn_thu"
                style="@style/btnChooseDate"
                android:text="@string/thursday" />

            <Button
                android:id="@+id/btn_fri"
                style="@style/btnChooseDate"
                android:text="@string/friday" />

            <Button
                android:id="@+id/btn_sat"
                style="@style/btnChooseDate"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="0dp"
                android:text="@string/saturday" />


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_calendar"
            style="@style/AddAlarmConstraintLayoutStyle"
            android:layout_marginTop="24dp"
            >

            <ImageView
                android:id="@+id/icon_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/noDescription"
                android:padding="0dp"
                android:src="@drawable/ic_calendar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/schedule_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/schedule_alarm"
                android:textColor="@color/text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_calendar"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/noDescription"
                android:padding="0dp"
                android:src="@drawable/ic_add_circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/AddAlarmConstraintLayoutStyle">

            <ImageButton
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/noDescription"
                android:padding="0dp"
                android:src="@drawable/ic_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/light_blue" />

            <EditText
                android:id="@+id/tf_message"
                style="@style/CustomEditTextStyle"
                android:autofillHints="name"
                android:hint="@string/message_placeholder"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/AddAlarmConstraintLayoutStyle">

            <ImageButton
                android:id="@+id/music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/noDescription"
                android:padding="0dp"
                android:src="@drawable/ic_music"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/light_blue" />

            <EditText
                android:id="@+id/btn_music"
                style="@style/CustomEditTextStyle"
                android:autofillHints="name"
                android:enabled="false"
                android:inputType="text"
                android:text="@string/default_text"
                android:textColor="@color/text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/music"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:background="@drawable/btn_border"
            android:text="@string/save" />


    </LinearLayout>

</LinearLayout>