<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.alarm.AlarmReceiverActivity">

    <LinearLayout
        android:id="@+id/layout_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/noDescription"
            android:src="@drawable/ic_day"

            />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="02:00"
            android:textColor="@color/text"
            android:textSize="60sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layout_time"
        android:textAlignment="center"
        android:textSize="18sp"
        android:paddingVertical="16dp"
        android:text="Message"
        />

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space">

        <Button
            android:id="@+id/btn_stop"
            style="@style/btnChooseDate"
            android:layout_height="80dp"
            android:text="@string/stop" />

        <Button
            android:id="@+id/btn_this"
            style="@style/btnChooseDate"
            android:layout_height="80dp"
            android:paddingVertical="16dp"
            android:text="@string/this_string" />

        <Button
            android:id="@+id/btn_alarm"
            style="@style/btnChooseDate"
            android:layout_height="80dp"
            android:paddingVertical="16dp"
            android:text="@string/alarm" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>